--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "mongoose": "^8.12.1",
-    "twilio": "^5.4.5"
+    "twilio": "^5.4.5",
+     "dotenv": "^16.3.1"
   }
 }
